--- a/kwitter_page.html
+++ b/kwitter_page.html
@@ -17,8 +17,8 @@
 </head>
 <body>
 
-<div class="container>"
-	<button id="logout" class="glyphicon glyphicon-log-out btn btn-danger" onclick="logout()">Logout</button>
+<div class="container">
+	<button id="logout" class="glyphicon glyphicon-log-out btn btn-danger">Logout</button>
 	<center>
 		<h1 class="header">	
 			Kwitter	
